--- a/Puntos.html
+++ b/Puntos.html
@@ -35,7 +35,7 @@
     let body = d3.select("#body")
     let container = d3.select("#container")
 
-    d3.csv("data3.csv").then((data) => {
+    d3.csv("./doc/data3.csv").then((data) => {
         showData(data);
     })
     function showTooltip(text, coords) {
@@ -53,27 +53,27 @@
 
         let bodyWidth = 450;
         let bodyHeight = 450;
-        let xExtent = d3.extent(clients, d => +d.Pretermino)
+        let xExtent = d3.extent(clients, d => +d.BIRTH_peso5)
         let xScale = d3.scaleLinear().range([0, bodyWidth])
-            .domain([xExtent[0] - 5, xExtent[1] + 5])
+            .domain([0, xExtent[1] + 100])
 
 
-        let yExtent = d3.extent(clients, d => +d.FOLL12M_peso12)
+        let yExtent = d3.extent(clients, d => +d.BIRTH_talla5)
         let yScale = d3.scaleLinear().range([bodyHeight, 0])
-            .domain([yExtent[0] - 5, yExtent[1] + 5])
+            .domain([0, yExtent[1] + 100])
 
         let join = body.selectAll("circle")
             .data(clients)
 
         let newelements = join.enter()
             .append("circle")
-            .style("fill", "red")
+            .style("fill", "blue")
             .style("r", "2")
 
         join.merge(newelements)
             .transition()
-            .attr("cx", d => xScale(+d.Pretermino))
-            .attr("cy", d => yScale(+d.FOLL12M_peso12))
+            .attr("cx", d => xScale(+d.BIRTH_peso5))
+            .attr("cy", d => yScale(+d.BIRTH_talla5))
 
         let yAxis = d3.axisLeft(yScale);
         let yAxisGroup = d3.select("#yAxis")
@@ -84,8 +84,8 @@
         let xAxisGroup = d3.select("#xAxis")
             .style("transform", `translate(40px, ${bodyHeight + 10}px)`)
             .call(xAxis)
-
-        let zoom = d3.zoom()
+            
+            let zoom = d3.zoom()
         zoom.on("zoom", function (a, b) {
             let newXScale = d3.event.transform.rescaleX(xScale);
             let newYScale = d3.event.transform.rescaleY(yScale);
