--- a/Puntos.html
+++ b/Puntos.html
@@ -67,30 +67,29 @@
             .domain([0, yExtent[1] + 100])
 
         let joinCircle = body.selectAll("circle")
-            .data(clients.filter(d=>d.Pretermino == 0 && d.BIRTH_sexo5 == 1))
+            .data(clients.filter(d=>d.Pretermino == 0))
 
         let newelementsCircle = joinCircle.enter()
             .append("circle")
             .style("fill", "blue")
+            .style("opacity","0.5")
             .style("r", "5")
 
 
         let joinRect = body.selectAll("rect")
-            .data(clients.filter(d=>(d.Pretermino === '1' && d.BIRTH_sexo5 == '1')))
+            .data(clients.filter(d=>(d.Pretermino == 1)))
 
         let newelementsRect = joinRect.enter()
             .append('rect')
             .attr('width', 5)
             .attr('height', 5)
-            .attr('fill', 'blue')
-
-
+            .style("opacity","0.5")
+            .attr('fill', 'red')
 
         joinRect.merge(newelementsRect)
             .transition()
             .attr("x", d => xScale(+d.BIRTH_peso5))
             .attr("y", d => yScale(+d.BIRTH_talla5))
-
 
         joinCircle.merge(newelementsCircle)
             .transition()
@@ -119,20 +118,7 @@
             yAxis.scale(newYScale)
             yAxisGroup.call(yAxis)
 
-            joinCircleM.merge(newelementsCircleM)
-                .attr("cx", d => newXScale(+d.BIRTH_peso5))
-                .attr("cy", d => newYScale(+d.BIRTH_talla5))
-              .on("mouseenter", (d) => {
-                showTooltip(d.Name, [d3.event.clientX, d3.event.clientY])
-              })
-              .on("mousemove", (d) => {
-                showTooltip(d.Name, [d3.event.clientX, d3.event.clientY + 30])
-              })
-              .on("mouseleave", (d) => {
-                d3.select("#tooltip").style("display", "none")
-              })
-
-              joinCircleF.merge(newelementsCircleF)
+              joinCircle.merge(newelementsCircle)
                 .attr("cx", d => newXScale(+d.BIRTH_peso5))
                 .attr("cy", d => newYScale(+d.BIRTH_talla5))
               .on("mouseenter", (d) => {
@@ -153,7 +139,7 @@
                 d3.select("#tooltip").style("display", "none")
               })
 
-              joinRectM.merge(newelementsRectM)
+              joinRect.merge(newelementsRect)
                 .attr("x", d => newXScale(+d.BIRTH_peso5))
                 .attr("y", d => newYScale(+d.BIRTH_talla5))
               .on("mouseenter", (d) => {
@@ -173,28 +159,6 @@
               .on("mouseleave", (d) => {
                 d3.select("#tooltip").style("display", "none")
               })
-
-              joinRectF.merge(newelementsRectF)
-                .attr("x", d => newXScale(+d.BIRTH_peso5))
-                .attr("y", d => newYScale(+d.BIRTH_talla5))
-              .on("mouseenter", (d) => {
-                let dat= "parto por cesarea"
-                if(d.BIRTH_cesarea==0){
-                  dat="parto natural";
-                }
-                showTooltip(dat+d.BIRTH_cesarea, [d3.event.clientX, d3.event.clientY])
-              })
-              .on("mousemove", (d) => {
-                let dat= "parto por cesarea"
-                if(d.BIRTH_cesarea==0){
-                  dat="parto natural";
-                }
-                showTooltip(dat, [d3.event.clientX, d3.event.clientY + 30])
-              })
-              .on("mouseleave", (d) => {
-                d3.select("#tooltip").style("display", "none")
-              })
-
 
         });
         container.call(zoom)
