--- a/Puntos.html
+++ b/Puntos.html
@@ -5,9 +5,11 @@
 </head>
 
 <body id="bod">
+
 <div id="fondo">
-<div id="tooltip"></div>
+
 <div id="div1">
+  <div id="tooltip"></div>
   <h1>Analisis recien nacido</h1>
   <svg id="container" height="500" width="500" , style="border: solid 1px #000; margin-top: 10px">
     <g id="body" style="transform:translate(40px,10px)"></g>
@@ -16,6 +18,7 @@
   </svg>
 </div>
 <div id="div2">
+  <div id="tooltip2"></div>
   <h1>Analisis doce meses de edad</h1>
   <svg id="container2" height="500" width="500" , style="border: solid 1px #000; margin-top: 10px">
     <g id="body2" style="transform:translate(40px,10px)"></g>
