--- a/Puntos.html
+++ b/Puntos.html
@@ -26,7 +26,7 @@
     <g id="xAxis2"></g>
   </svg>
 </div>
-  <form method="get" action="/page2">
+  <form method="get" action="/puntos2.html">
     <button type="submit" id="but">Seccion 2</button>
   </form>
 </div>
