--- a/Puntos2.html
+++ b/Puntos2.html
@@ -26,8 +26,8 @@
         <g id="xAxis2"></g>
       </svg>
     </div>
-      <form method="get" action="/page2">
-        <button type="submit" id="but">Seccion 2</button>
+      <form method="get" action="/puntos.html">
+        <button type="submit" id="but">Seccion 1</button>
       </form>
     </div>
     
