--- a/Puntos.html
+++ b/Puntos.html
@@ -7,7 +7,35 @@
 <body id="bod">
 
 <div id="fondo">
-
+  <form id="graf">
+    <input type="button"
+           onclick="gen3(), gen4()"
+           value="graficar" id="buton">
+  </form>
+  <p>Talla 12 meses</p>
+  <select name="VARIABLE 1" id="var1">
+    <option value="1" >62-70</option>
+    <option value="2">70-86</option>
+    <option value="3"SELECTED>todos</option>
+  </select>
+  <p>peso 12 meses </p>
+  <select name="VARIABLE 2" id="var2">
+    <option value="1" >7000-8000</option>
+    <option value="2">8500-10000</option>
+    <option value="3"SELECTED>todos</option>
+  </select>
+  <p>Talla 0 meses</p>
+  <select name="VARIABLE 1" id="var3">
+    <option value="1" >34-37</option>
+    <option value="2">38-45</option>
+    <option value="3"SELECTED>todos</option>
+  </select>
+  <p>peso 0 meses </p>
+  <select name="VARIABLE 2" id="var4">
+    <option value="1" >1100-1300</option>
+    <option value="2">1400-1600</option>
+    <option value="3"SELECTED>todos</option>
+  </select>
 <div id="div1">
   <div id="tooltip"></div>
   <h1>Analisis recien nacido</h1>
