--- a/Puntos2.html
+++ b/Puntos2.html
@@ -9,19 +9,31 @@
     <div id="fondo">
       <form id="graf">
         <input type="button"
-               onclick="gen()"
+               onclick="gen2(),gen()"
                value="graficar" id="buton">
       </form>
-      <p>Talla</p>
+      <p>Talla 12 meses</p>
       <select name="VARIABLE 1" id="var1">
         <option value="1" >62-70</option>
         <option value="2">70-86</option>
         <option value="3"SELECTED>todos</option>
       </select>
-      <p>pc</p>
+      <p>pc 12 meses </p>
       <select name="VARIABLE 2" id="var2">
         <option value="1" >42-45</option>
         <option value="2">46-49</option>
+        <option value="3"SELECTED>todos</option>
+      </select>
+      <p>Talla 0 meses</p>
+      <select name="VARIABLE 1" id="var3">
+        <option value="1" >34-37</option>
+        <option value="2">38-45</option>
+        <option value="3"SELECTED>todos</option>
+      </select>
+      <p>pc 0 meses </p>
+      <select name="VARIABLE 2" id="var4">
+        <option value="1" >28-30</option>
+        <option value="2">31-35</option>
         <option value="3"SELECTED>todos</option>
       </select>
     <div id="div1">
