--- a/Puntos.html
+++ b/Puntos.html
@@ -39,7 +39,7 @@
 <div id="div1">
   <div id="tooltip"></div>
   <h1>Analisis recien nacido</h1>
-  <svg id="container" height="500" width="500" , style="border: solid 1px #000; margin-top: 10px">
+  <svg id="container" height="90%" width="100%" , style="border: solid 1px #000; margin-top: 10px">
     <g id="body" style="transform:translate(40px,10px)"></g>
     <g id="yAxis"></g>
     <g id="xAxis"></g>
