--- a/Puntos2.html
+++ b/Puntos2.html
@@ -44,6 +44,8 @@
         <g id="yAxis"></g>
         <g id="xAxis"></g>
       </svg>
+      <p id="lab3">Talla(cm)</p>
+      <p id="lab1">Pc(cm)</p>
     </div>
     <div id="div2">
       <div id="tooltip2"></div>
@@ -53,6 +55,8 @@
         <g id="yAxis2"></g>
         <g id="xAxis2"></g>
       </svg>
+      <p id="lab4">Talla (cm)</p>
+      <p id="lab2">Pc(cm)</p>
     </div>
       <form method="get" action="./Puntos.html">
         <button type="submit" id="but">Seccion 1</button>
