--- a/Puntos.html
+++ b/Puntos.html
@@ -39,11 +39,13 @@
 <div id="div1">
   <div id="tooltip"></div>
   <h1>Analisis recien nacido</h1>
-  <svg id="container" height="90%" width="100%" , style="border: solid 1px #000; margin-top: 10px">
+  <svg id="container" height="500" width="500" , style="border: solid 1px #000; margin-top: 10px">
     <g id="body" style="transform:translate(40px,10px)"></g>
     <g id="yAxis"></g>
     <g id="xAxis"></g>
   </svg>
+  <p id="lab3">Talla(cm)</p>
+  <p id="lab1">Peso(g)</p>
 </div>
 <div id="div2">
   <div id="tooltip2"></div>
@@ -53,6 +55,8 @@
     <g id="yAxis2"></g>
     <g id="xAxis2"></g>
   </svg>
+  <p id="lab4">Talla (cm)</p>
+  <p id="lab2">Peso(g)</p>
 </div>
   <form method="get" action="./puntos2.html">
     <button type="submit" id="but">Seccion 2</button>
