--- a/Puntos2.html
+++ b/Puntos2.html
@@ -7,6 +7,7 @@
 <body id="bod">
 
     <div id="fondo">
+      <p id="text1">El toogle en la izquierda muestra el genero y el de la derecha si es parto natural o cesarea. La forma la forma y color dice si es pretermino o no (cuadrado/rojo -> pretermino, circulo/azul -> NO pretermino)</p>
       <form id="graf">
         <input type="button"
                onclick="gen2(),gen()"
