--- a/Puntos.html
+++ b/Puntos.html
@@ -7,6 +7,7 @@
 <body id="bod">
 
 <div id="fondo">
+  <p id="text1">El toogle muestra si la persona nacio en parto natural o por cesarea y la forma y color dice si es pretermino o no (cuadrado/rojo -> pretermino, circulo/azul -> NO pretermino)</p>
   <form id="graf">
     <input type="button"
            onclick="gen3(), gen4()"
